apps/upstream/satisfactory-server/manifests/ingresssroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: satisfactory-api-tcp
spec:
  entryPoints:
    - sf-api
  routes:
    - match: HostSNI(`*`)
      services:
        - name: satisfactory-server
          port: 8888
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sf-game-tcp
spec:
  entryPoints:
    - sf-game-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: satisfactory-server
          port: 7777
